# python_pack_and_doc

./: .buildinfo  .gitignore  INSTALL.md  MANIFEST.in  Makefile  PACKAGING.md  README.md  acknowledgements.html  changelog.html  contributing.html  development.html  devsupport.html  features.html  genindex.html  index.html  install.html  objects.inv  packaging.html  py-modindex.html  requirements-dev.txt  requirements.txt  roadmap.html  search.html  searchindex.js  setup.cfg  setup.py  support.html  usage.html  versioneer.py
.github/workflows/: main.yaml
_modules/: index.html
_modules/pack_and_doc/: _exampleclass.html  _examplefunction.html
_modules/pack_and_doc/submodule/: _anotherclass.html
_sources/: changelog.rst.txt  install.rst.txt  packaging.rst.txt  support.rst.txt
_sources/api/: index_PackAndDoc.rst.txt  index_api_PackAndDoc.rst.txt
_sources/tutorial/: index.rst.txt
_static/: custom.js  documentation_options.js
actions/: assemble_website.py  build_docs.py  build_manylinux.py  deduplicate_website.py  get_tags.py  gitupdate_website.py
api/: index.html  index_PackAndDoc.html  index_PackAndDoc_SubModule.html  index_api_PackAndDoc.html  index_api_PackAndDoc_SubModule.html
doc/source/: conf.py  contributing.rst  development.rst  index.rst
doc/source/api/: index.rst  index_PackAndDoc_SubModule.rst  index_api_PackAndDoc_SubModule.rst
doc/source/quickstart/: index.rst
git_hooks/: commit-msg
quickstart/: index.html
src/pack_and_doc/: __init__.py  _exampleclass.py  _examplefunction.py  _version.py
src/pack_and_doc/disable_openmp/: omp.h
src/pack_and_doc/example_library/: library.c
src/pack_and_doc/scripts/: main.py
tests/: conftest.py  test_fast_class.py
tutorial/: index.html
(+3 files in other folders)
