[metadata]
name = pack_and_doc
description = Python packaging and documentation example
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache
author = Christopher Woods
author_email = Christopher.Woods@bristol.ac.uk
url = https://github.com/chryswoods/python_pack_and_doc
download_urls = https://pypi.org/project/NOT_SET_YET
project_urls =
	Documentation = https://path/to/your/website
	Code = https://github.com/chryswoods/python_pack_and_doc
	Issue tracker = https://github.com/chryswoods/python_pack_and_doc/issues
classifiers =
	Development Status :: 4 - Beta
	License :: OSI Approved :: Apache
	Intended Audience :: Education
	Intended Audience :: Science/Research
	Topic :: Scientific/Engineering
	Natural Language :: English
	Operating System :: OS Independent
	Operating System :: MacOS :: MacOS X
	Operating System :: Microsoft :: Windows
	Operating System :: POSIX :: Linux
	Programming Language :: C
	Programming Language :: Cython
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: Implementation :: CPython

[entry_points]
console_scripts =
  pack_and_doc = pack_and_doc.scripts.main:cli

[options]
zip_safe = False
python_requires = >=3.7
package_dir = =src
packages = find:

[options.packages.find]
where = src

[options.package_data]
* = *.pxd, *.h

[versioneer]
VCS = git
style = pep440
versionfile_source = src/pack_and_doc/_version.py
versionfile_build = pack_and_doc/_version.py
tag_prefix =
parentdir_prefix = pack_and_doc-
